# solarlogger-backend

./: Pipfile  README.md  backend-config.toml  main.py  pyproject.toml
.github/workflows/: blank.yml
setup-scripts/: readme.md
src/: e_meter_abstraction.py  main.py
src/e_meters/: e_meter_abstraction.py
src/tests/: sample_test.py
