[tool.poetry]
name = "solarlogger-backend"
version = "0.1.0"
description = ""
authors = ["Manuel Mühlberger <tamerlein73@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.0"
minimalmodbus = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
